--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,7 @@ label {
 }
 
 #submit {
+  font-family: 'Poppins', sans-serif;
   background-color: aqua;
   padding-left: 50px;
   padding-right: 50px;
