linked new background img

--- a/public/stylesheets/styleMain.css
+++ b/public/stylesheets/styleMain.css
@@ -37,7 +37,7 @@ label {
 }
 
 .has-bg-img {
-  background-image: url('../img/cityskyline.png');
+  background-image: url('../img/newCityskyline');
   background-size: cover;
 }
 
