--- a/public/stylesheets/styleindex.css
+++ b/public/stylesheets/styleindex.css
@@ -7,10 +7,19 @@ form.login {
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  background-color: rgb(226, 226, 226);
+}
+
 .box {
-  
+  margin-top:20px;
+  padding-bottom: 20px;
   margin-left: 20%;
   margin-right: 20%;
+}
+
+#loginBtn {
+  background-color:  rgb(57, 226, 226);
 }
 
 h2 {
