city and days input replaced with radio buttons

--- a/public/stylesheets/styleMain.css
+++ b/public/stylesheets/styleMain.css
@@ -17,6 +17,10 @@ form.login {
   background-color: rgb(226, 226, 226);
 }
 
+/* .radioDiv {
+  margin-right: 50px;
+} */
+
 label {
   margin-right: 15px;
   margin-bottom: 15px;
